# 6sens

./: .gitignore  pyproject.toml  requirements.txt  setup.py
6sens.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
6sens/audio/: audio.md
6thsense/: .gitignore  6thsense.OutJob  6thsense.PrjPcb  6thsense.PrjPcbStructure  6thsense_lib.SchLib  6thsense_pcb_lib.PcbLib  main.Cam  main.PcbDoc  main.SchDoc  main_drill.Cam  matrix.SchDoc
docs/: README.md  _config.yaml
drafts/: asynchronous.py  deepsparse_test.py  matrix_calibration.py  matrix_test.py  pyserial.py  serial_test.py  yolov5.py  yolov8.py
media/: logo.avif  logo_unflip.xcf  logo_unflip_transparent.xcf
sixsens/: __main__.py  app.py  app_reaction_builder.py
sixsens/audio/: audio.md  audio.py  audio_process.py  nouns.py  object.py  status.py
sixsens/model/: pipeline.py  yolo.py
sixsens/process/: audio_player.py  matrix.py  obstruction.py  process.py  serial.py  yolo.py
sixsens/reaction/: audio_reaction.py  matrix_reaction.py  reaction_builder.py
sixsens/serial/: serial.py
sixsens_hw/6sens/: 6sens.ino
sixsens_hw/led_test/: led_test.ino
sixsens_hw/pyserial/: pyserial.ino
sixsens_hw/serial_test/: serial_test.ino
sixsens_hw/vibration_test/: vibration_test.ino
src/: app.py
